--- a/Views/Patients/History.cshtml
+++ b/Views/Patients/History.cshtml
@@ -7,10 +7,6 @@
 @{
     ViewData["Title"] = "Historial de Ajustes - " + Model.Name;
 }
-@{
-            var sessionValue = HttpContextAccessor.HttpContext?.Session?.GetString("AdminLoggedIn");
-            }   
-
 
 <h2 class="text-center my-4">Historial de Ajustes para @Model.Name</h2>
 
@@ -46,5 +42,5 @@ else
 }
 
 <div class="text-center mt-4">
-    <a asp-action="Index" asp-route-session_id="@sessionValue" class="btn btn-secondary">Volver a la lista de pacientes</a>
+    <a asp-action="Index" class="btn btn-secondary">Volver a la lista de pacientes</a>
 </div>
