--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
                 <div class="container">
-                    <a class="navbar-brand" href="/?session_id=@sessionValue">PatientManagementSystem</a>
+                    <a class="navbar-brand" href="/">PatientManagementSystem</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -32,13 +32,13 @@
                         <ul class="navbar-nav ms-auto">
                         
                             <li class="nav-item">
-                                <a class="nav-link" href="/Patients?session_id=@sessionValue">Pacientes</a>
+                                <a class="nav-link" href="/Patients">Pacientes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/Appointments?session_id=@sessionValue">Citas</a>
+                                <a class="nav-link" href="/Appointments">Citas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/Admin?session_id=@sessionValue">Administradores</a>
+                                <a class="nav-link" href="/Admin">Administradores</a>
                             </li>
 
                             <li class="nav-item">
