--- a/Views/Patients/Create.cshtml
+++ b/Views/Patients/Create.cshtml
@@ -6,9 +6,7 @@
 @{
     ViewData["Title"] = "Crear Paciente";
 }
-@{
-            var sessionValue = HttpContextAccessor.HttpContext?.Session?.GetString("AdminLoggedIn");
-            }  
+
 <h1 class="mb-4">Crear Paciente</h1>
 
 <div class="row">
@@ -92,7 +90,7 @@
                 <!-- Submit and Back Buttons -->
                 <div class="d-flex justify-content-between">
                     <input type="submit" value="Crear" class="btn btn-primary" />
-                    <a asp-action="Index" asp-route-session_id="@sessionValue" class="btn btn-secondary">Volver al Listado</a>
+                    <a asp-action="Index" class="btn btn-secondary">Volver al Listado</a>
                 </div>
             </form>
         </div>
