--- a/Views/Patients/Edit.cshtml
+++ b/Views/Patients/Edit.cshtml
@@ -6,9 +6,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
-@{
-            var sessionValue = HttpContextAccessor.HttpContext?.Session?.GetString("AdminLoggedIn");
-            } 
+
 <h1 class="mb-4">Editar Paciente</h1>
 
 <div class="row">
@@ -119,7 +117,7 @@
                 <!-- Submit and Back Buttons -->
                 <div class="d-flex justify-content-between">
                     <input type="submit" value="Guardar" class="btn btn-primary" />
-                    <a asp-action="Index" asp-route-session_id="@sessionValue" class="btn btn-secondary"> Listado</a>
+                    <a asp-action="Index" class="btn btn-secondary"> Listado</a>
                 </div>
             </form>
         </div>
